# hw-buddy

./: .env.example  .gitignore  DIRECT_IMAGE_UPLOAD.md  NEW_ARCHITECTURE.md  README.md  pubspec.yaml
backend/: .env.example  .gitignore  README_LIVE.md  audio_websocket_server.py  firestore_listener.py  hw_live_agent.py  hw_live_agent_context_injection.py  hw_tutor_agent.py  image_upload_handler.py  main.py  main_live.py  prompts.py  pyproject.toml  requirements.txt  start_live_server.sh  test_server.py  websocket_server.py
backend/config/: hw_config.py
backend/core/: gemini_client.py  session.py  tool_handler.py  websocket_handler.py
backend/tests/: __init__.py  simple_test.py  test_logic.py  test_take_picture.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
mobile-app/: firebase.json  pubspec.yaml  run_mobile_app.sh
mobile-app/ios/: GoogleService-Info.plist
mobile-app/ios/Runner.xcodeproj/: project.pbxproj
mobile-app/lib/: camera_service.dart  http_service.dart  main.dart  main.dart.backup  main.dart.bak  websocket_service.dart
web-app/: .env.example  .nextignore  README_BACKEND_AUDIO.md  components.json  next.config.js  package-lock.json  package.json  start_frontend.sh  tailwind.config.js  tsconfig.json
web-app/public/: audio-capture-processor.js
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/components/: ActionCards.tsx  BackendAudioSession.tsx  GeminiLiveSession.tsx  MathJaxDisplay.tsx  ProcessingStatus.tsx  TakePicture.tsx  VisualizationPanel.tsx  (+1 more)
web-app/src/lib/: firebase.ts
(+14 files in other folders)
