[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.115.13",
    "firebase-admin>=6.9.0",
    "google-adk>=1.4.2",
    "google-genai>=1.21.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "uvicorn>=0.34.3",
]
